@@ -1,7 +1,7 @@
 Package: EGAnet
 Title: Exploratory Graph Analysis – a Framework for Estimating the Number of Dimensions in Multivariate Data using Network Psychometrics
 Version: 2.0.3
-Date: 2023-11-13
+Date: 2023-11-16
 Authors@R: c(person("Hudson", "Golino", email = "hfg9s@virginia.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-1601-1447")),
 	     person("Alexander", "Christensen", email = "alexpaulchristensen@gmail.com", role = "aut", comment = c(ORCID = "0000-0002-9798-7037")),
 	     person("Robert", "Moulder", email = "rgm4fd@virginia.edu", role = "ctb", comment = c(ORCID = "0000-0001-7504-9560")),
@@ -25,8 +25,8 @@ Depends: R (>= 3.5.0)
 License: GPL (>= 3.0)
 Encoding: UTF-8
 LazyData: true
-Imports: future, future.apply, glasso, GGally, 
-         ggdendro, ggplot2, ggpubr, GPArotation, 
+Imports: dendextend, future, future.apply, glasso, 
+	 GGally, ggplot2, ggpubr, GPArotation, 
          igraph (>= 1.3.0), lavaan, Matrix, methods, 
          network, progressr, qgraph, semPlot, sna, stats
 Suggests: fitdistrplus, fungible, gridExtra, knitr, markdown,
